--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
