--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-react": "^5.58.0",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.556.0",
     "preact": "^10.27.2",
     "react": "^19.2.1",
